CAL-526: UI bug of Repeat field on IE9
Fix description: backport from UI-2665 fix.

--- a/calendar-webapp/src/main/webapp/skin/less/calendar.less
+++ b/calendar-webapp/src/main/webapp/skin/less/calendar.less
@@ -86,13 +86,10 @@
 .checkBoxArea {
 		.checkboxContainer {
 			width: 18px;
-		}
+		}		
 		
-		.pull-left.item3  + .pull-left {
-			margin-left: 0;
-		}
 		 .textLabel {
-			margin-left: 20px;
+			margin-left: 18px;
 			span {
 				margin-right: 5px;
 			}
